# imageproc-examples

./: package-lock.json  package.json  tailwind.config.js
src/: App.svelte  helper.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src/assets/css/: output.css
src/lib/contrast/: StretchContrast.svelte  Threshold.svelte
src/lib/distance_transform/: DistanceTransform.svelte
src/lib/edges/: Canny.svelte
src/lib/filter/: BilateralFilter.svelte  GaussianBlur.svelte  MedianFilter.svelte  Sharpen3x3.svelte  SharpenGaussian.svelte
src/lib/morphology/: Dilate.svelte
src/lib/noise/: GaussianNoise.svelte  SaltAndPepperNoise.svelte
